--- a/Capstone02/Views/Employees/Index.cshtml
+++ b/Capstone02/Views/Employees/Index.cshtml
@@ -4,7 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Employee</h1>
+<header style="text-align: center; padding: 20px;">
+    <h5>Iligan City East National High School - Santa Filomena</h5>
+    <h6>Butuan - Cagayan de Oro - Iligan Rd, Iligan City, Lanao del Norte</h6>
+	<h6>Since 1985</h6>
+</header>
+
+<h2 style="text-align: center">O F F I C E R S</h2>
 
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New</a>
@@ -21,7 +27,7 @@
                 @* @Html.DisplayNameFor(model => model.LastName) *@
             </th>
             <th>
-                Type
+                Office
                 @* @Html.DisplayNameFor(model => model.Type) *@
             </th>
             <th>
@@ -32,7 +38,7 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+    @foreach (var item in Model) {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
@@ -48,10 +54,10 @@
             </td>
             <td>
                 <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a>
-                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
-                    <a asp-action="Delete" class="btn btn-primary" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
+                <a asp-action="Delete" class="btn btn-primary" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
-}
+    }
     </tbody>
 </table>
