--- a/Capstone02/Views/Parents/Create.cshtml
+++ b/Capstone02/Views/Parents/Create.cshtml
@@ -4,63 +4,63 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Parent</h4>
+<h4 style="text-align: center">Enter Parent's Information</h4>
 <hr />
-<div class="col-lg-8">
+
+<div class="container mt-6">
+    <div class="row justify-content-center">
+        <div class="col-lg-10">
     <div class="card">
         <div class="card-body">
-        <form asp-action="Create">
+            <form asp-action="Create">
 
-            <div class="row mb-3">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="col-sm-3">
-                <h6 class="mb-0">Parent's Name</h6>
-                @*<label asp-for="ParentName" class="control-label"></label>*@
-            </div>
-                <div class="col-sm-9 text-secondary">
-                <input asp-for="ParentName" class="form-control" />
-                <span asp-validation-for="ParentName" class="text-danger"></span>
-			    </div>
-            </div>
+                <div class="row mb-3">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="col-sm-3">
+                        <h6 class="mb-0">Parent's Name</h6>
+                        @*<label asp-for="ParentName" class="control-label"></label>*@
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                        <input asp-for="ParentName" class="form-control" />
+                        <span asp-validation-for="ParentName" class="text-danger"></span>
+                    </div>
+                </div>
 
-            <div class="row mb-3">
-            <div class="col-sm-3">
-                <h6 class="mb-0">Contact Number</h6>
-                @*<label asp-for="ContactNumber" class="control-label"></label>*@
-            </div>
-                <div class="col-sm-9 text-secondary">
-                <input asp-for="ContactNumber" class="form-control" />
-                <span asp-validation-for="ContactNumber" class="text-danger"></span>
-			    </div>
-            </div>
+                <div class="row mb-3">
+                    <div class="col-sm-3">
+                        <h6 class="mb-0">Contact Number</h6>
+                        @*<label asp-for="ContactNumber" class="control-label"></label>*@
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                        <input asp-for="ContactNumber" class="form-control" />
+                        <span asp-validation-for="ContactNumber" class="text-danger"></span>
+                    </div>
+                </div>
 
-            <div class="row mb-3">
-            <div class="col-sm-3">
-                <h6 class="mb-0">Child</h6>
-                @*<label asp-for="StudentId" class="control-label">Student Name</label>*@
-            </div>
-                <div class="col-sm-9 text-secondary">
-                <select asp-for="StudentId" class ="form-control" asp-items="ViewBag.StudentId"></select>
-			    </div>
-            </div>
-            
-            <div class="row">
-				<div class="col-sm-3"></div>
-				<div class="col-sm-9 text-secondary">
-				<a asp-action="Index" class="btn btn-primary px-10">Back to List</a>
-                <input type="submit" value="Submit" class="btn btn-primary px-10" />
-				</div>
-            </div>
+                <div class="row mb-3">
+                    <div class="col-sm-3">
+                        <h6 class="mb-0">Child</h6>
+                        @*<label asp-for="StudentId" class="control-label">Student Name</label>*@
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                                <select asp-for="StudentId" class="form-control" asp-items="ViewBag.StudentID"></select>
+                    </div>
+                </div>
 
-			</form>
-		</div>
+                <div class="row">
+                        <div class="col-sm-3"></div>
+                        <div class="col-sm-9 text-end">
+                        <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+                        <input type="submit" value="Submit" class="btn btn-primary" />
+                    </div>
+                </div>
+
+            </form>
+        </div>
     </div>
+		</div>
+	</div>
 </div>
-
-
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
