--- a/Capstone02/Views/Schools/Details.cshtml
+++ b/Capstone02/Views/Schools/Details.cshtml
@@ -27,6 +27,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" class="btn btn-primary" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index" class="btn btn-primary">Back to List</a>
+	@*<a asp-action="Edit" class="btn btn-primary" asp-route-id="@Model?.Id">Edit</a>*@
+    <a asp-action="Index" class="btn btn-primary">Back</a>
 </div>
