--- a/Capstone02/Views/Schools/Index.cshtml
+++ b/Capstone02/Views/Schools/Index.cshtml
@@ -6,9 +6,9 @@
 
 <h1>School</h1>
 
-<p>
+@*<p>
     <a asp-action="Create" class="btn btn-primary">Create New</a>
-</p>
+</p>*@
 <table class="table">
     <thead>
         <tr>
@@ -33,9 +33,9 @@
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
-                    <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" class="btn btn-primary" asp-route-id="@item.Id">Delete</a>
+					@*<a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a>*@
+                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
+					@*<a asp-action="Delete" class="btn btn-primary" asp-route-id="@item.Id">Delete</a>*@
             </td>
         </tr>
 }
