--- a/Capstone02/Views/Transactions/Index.cshtml
+++ b/Capstone02/Views/Transactions/Index.cshtml
@@ -43,8 +43,8 @@
                 @Html.DisplayFor(modelItem => item.PTAFee.Type)
             </td>
             <td>
-                    <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a>
+                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a>
                     <a asp-action="Delete" class="btn btn-primary" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
